--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
@@ -13,15 +12,27 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/text_view_content"
+        android:id="@+id/text_view_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="내용" />
+        android:text="저자"
+        android:layout_below="@id/text_view_title" />
 
     <TextView
         android:id="@+id/text_view_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="날짜" />
+        android:text="날짜"
+        android:layout_below="@id/text_view_author" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_delete_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:textColor="@android:color/holo_red_dark"
+        android:layout_below="@id/text_view_date"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp" />
+
+</RelativeLayout>
