--- a/app/src/main/res/layout/activity_reading_schedule2.xml
+++ b/app/src/main/res/layout/activity_reading_schedule2.xml
@@ -51,17 +51,30 @@
             android:textSize="20dp" />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="오늘 읽은 쪽수 : 00쪽"
-        android:textSize="20dp"
-        android:layout_marginBottom="80dp"/>
+        android:orientation="horizontal"
+        android:layout_marginBottom="80dp"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="오늘 읽은 쪽수 :"
+            android:textSize="20dp" />
+        <EditText
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:id="@+id/todayPageInput"/>
+    </LinearLayout>
+
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="독서완료"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:id="@+id/completeButton"/>
 
 
 </LinearLayout>
