--- a/app/src/main/res/layout/activity_reading_schedule3.xml
+++ b/app/src/main/res/layout/activity_reading_schedule3.xml
@@ -16,20 +16,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="기간 내로 독서를"
+        android:text="오늘의 목표 달성!"
         android:textSize="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="마치치 못했습니다."
-        android:textSize="20dp"
-        android:layout_marginBottom="20dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="재도전 하시겠습니까?"
+        android:text="이대로 계속해 봅시다!"
         android:textSize="20dp"
         android:layout_marginBottom="20dp"/>
 
@@ -37,19 +30,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="오늘 읽은 분량 : 00쪽"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="내일 읽을 분량 : 00쪽"
         android:textSize="20dp"
         android:layout_marginBottom="40dp"/>
 
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="재도전"
-        android:textSize="20dp" />
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
         android:text="메인화면으로"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:id="@+id/mainBotton"/>
 
 
 </LinearLayout>
