--- a/app/src/main/res/layout/activity_reading_schedule1.xml
+++ b/app/src/main/res/layout/activity_reading_schedule1.xml
@@ -139,6 +139,6 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="시작하기"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:id="@+id/startButton"/>
 </LinearLayout>
