- (남은쪽수/남은기간)으로 오늘읽을책분량 정하기 - Book.java에 boolean completedToday 추가 true면 오늘의 독서는 끝, 메인화면에서 스케쥴 버튼을 눌렀을 때 ReadingScheduleActivity3으로 이동 false면 오늘의 독서가 끝나지 않음, 메인화면에서 스케쥴 버튼을 눌렀을 때 ReadingSchedule로 이동 - 매일 00시 00분에 (기준이 한국이 아님, 변경필요)completedToday를 false로 초기화. DailyWork.java 와 WorkScheduler.java로 구현 - BookViewModel.java는 데이터베이스의 변경사항이 존재하는지 지속적으로 관찰하는 역할. 이를 이용해서 readingScheduleButton 기능 심화
이후 구현할내용 :
1)ReadingSchedule3 구현 (OK)
2)마지막날이 지나면 독서를 종료하고, 실패했을 경우 재도전 권유 (OK)
3)오늘의 목표 달성 여부에 따른 문구 교체 (OK)
4)독서 종료 시 데이터베이스에서 책 삭제하고 완독목록에 추가

--- a/app/src/main/res/layout/activity_reading_schedule4.xml
+++ b/app/src/main/res/layout/activity_reading_schedule4.xml
@@ -12,22 +12,22 @@
         android:text="책 제목 : 000"
         android:textSize="20dp"
         android:layout_marginBottom="20dp"
-        android:id="@+id/title"/>
+        android:id="@+id/title_end"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="오늘의 목표 달성!"
+        android:text="축하합니다!"
         android:textSize="20dp"
-        android:id="@+id/isSuccess1"/>
+        android:id="@+id/isAllSuccess1"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이대로 계속해 봅시다!"
+        android:text="독서를 모두 마쳤습니다!"
         android:textSize="20dp"
         android:layout_marginBottom="20dp"
-        android:id="@+id/isSuccess2"/>
+        android:id="@+id/isAllSuccess2"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,22 +35,22 @@
         android:text="오늘 읽은 분량 : 00쪽"
         android:textSize="20dp"
         android:layout_marginBottom="40dp"
-        android:id="@+id/todayRead"/>
+        android:id="@+id/todayRead_end"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="내일 읽을 분량 : 00쪽"
+        android:text="재도전"
         android:textSize="20dp"
-        android:layout_marginBottom="40dp"
-        android:id="@+id/tomorrowRead"/>
-
+        android:visibility="invisible"
+        android:clickable="false"
+        android:id="@+id/retryBtn_end"/>
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="메인화면으로"
         android:textSize="20dp"
-        android:id="@+id/mainBotton"/>
+        android:id="@+id/mainBtn_end"/>
 
 
 </LinearLayout>
